// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Secret Overlay render create successfully 1`] = `
<div>
   
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws stepsOverlay StyledProps---padding-large--26zZ"
    style="width: 400px;"
  >
    <div
      class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-distribution-space-between--1TyN StyledProps---padding-top-small--1-XA StyledProps---padding-bottom-large--1zGv"
    >
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey800--2G2G StyledProps---font-size-medium--aOY7"
      >
        Create Secret
      </p>
      <button
        class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-cross StyledProps---main--1Wws"
          icon="cross"
        >
          <svg
            data-icon="cross"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              cross
            </desc>
            <path
              d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="OverlaySpinner---overlaySpinner--3Bs3"
    >
      <form
        class="FormikForm---main--1N87"
      >
        <div>
          <div
            class="bp3-form-group"
            data-id="secretManagerIdentifier-0"
          >
            <label
              class="bp3-label"
              for="secretManagerIdentifier"
            >
              Secrets Manager*
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-popover-wrapper Select---main--1QpB bp3-fill"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="secretManagerIdentifier"
                      placeholder="Search..."
                      style="padding-right: 0px;"
                      type="text"
                      value=""
                    />
                    <span
                      class="bp3-input-action"
                    >
                      <span
                        class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws StyledProps---padding-small--3f0A"
                        icon="caret-down"
                      >
                        <svg
                          data-icon="caret-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            caret-down
                          </desc>
                          <path
                            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="InputWithIdentifier---txtNameContainer--20iZ"
          >
            <div
              class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws"
              >
                ID
                :
              </p>
              <span
                class="InputWithIdentifier---idInput--w8_T"
                contenteditable="true"
              />
              <span
                class="bp3-icon bp3-icon-edit StyledProps---main--1Wws"
                icon="edit"
                style="vertical-align: middle;"
              >
                <svg
                  data-icon="edit"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    edit
                  </desc>
                  <path
                    d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="bp3-form-group"
              data-id="name-1"
            >
              <label
                class="bp3-label"
                for="name"
              >
                Secret Name*
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Please select a Secret Manager
          </p>
          <button
            class="bp3-button bp3-disabled StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi StyledProps---margin-top-large--1oBg"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              Save
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
   
</div>
`;

exports[`Create Secret Overlay render edit secret successfully 1`] = `
<div>
   
  <div
    class="StyledProps---font--2ipy StyledProps---main--1Wws stepsOverlay StyledProps---padding-large--26zZ"
    style="width: 400px;"
  >
    <div
      class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---flex--2Jz8 StyledProps---flex-distribution-space-between--1TyN StyledProps---padding-top-small--1-XA StyledProps---padding-bottom-large--1zGv"
    >
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-grey800--2G2G StyledProps---font-size-medium--aOY7"
      >
        Modify Secret
      </p>
      <button
        class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 Button---iconOnly--_pvt StyledProps---main--1Wws"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-cross StyledProps---main--1Wws"
          icon="cross"
        >
          <svg
            data-icon="cross"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              cross
            </desc>
            <path
              d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="OverlaySpinner---overlaySpinner--3Bs3"
    >
      <form
        class="FormikForm---main--1N87"
      >
        <div>
          <div
            class="bp3-form-group bp3-disabled"
            data-id="secretManagerIdentifier-0"
          >
            <label
              class="bp3-label"
              for="secretManagerIdentifier"
            >
              Secrets Manager*
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-popover-wrapper Select---main--1QpB bp3-fill"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-input-group bp3-disabled"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      disabled=""
                      name="secretManagerIdentifier"
                      placeholder="Search..."
                      style="padding-right: 0px;"
                      type="text"
                      value=""
                    />
                    <span
                      class="bp3-input-action"
                    >
                      <span
                        class="bp3-icon bp3-icon-caret-down StyledProps---main--1Wws StyledProps---padding-small--3f0A"
                        icon="caret-down"
                      >
                        <svg
                          data-icon="caret-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            caret-down
                          </desc>
                          <path
                            d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="InputWithIdentifier---txtNameContainer--20iZ"
          >
            <div
              class="Layout---horizontal--3rmQ StyledProps---main--1Wws InputWithIdentifier---txtIdContainer--2Ozd"
            >
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws"
              >
                ID
                :
              </p>
              <span
                class="InputWithIdentifier---idInput--w8_T"
                contenteditable="false"
                disabled=""
              >
                secretId
              </span>
            </div>
            <div
              class="bp3-form-group"
              data-id="name-1"
            >
              <label
                class="bp3-label"
                for="name"
              >
                Secret Name*
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    type="text"
                    value="Secret Name"
                  />
                </div>
              </div>
            </div>
          </div>
          <p
            class="StyledProps---font--2ipy StyledProps---main--1Wws"
          >
            Please select a Secret Manager
          </p>
          <button
            class="bp3-button bp3-disabled StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi StyledProps---margin-top-large--1oBg"
            disabled=""
            tabindex="-1"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              Save
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
   
</div>
`;
